[project]
name = "pytorch-drl4vrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "neptune>=1.13.0",
    "numpy>=2.2.1",
    "python-dotenv>=1.0.1",
    "pytorch-lightning>=2.5.0.post0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
